--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
   
 
 
-<p><a href="https://github.com/christinahedges/sparse3d/actions/workflows/pytest.yml"><img src="https://github.com/christinahedges/sparse3d/workflows/pytest/badge.svg" alt="Test status"/></a>
-<a href="https://github.com/christinahedges/sparse3d/actions/workflows/lint.yml"><img src="https://github.com/christinahedges/sparse3d/workflows/lint/badge.svg" alt="Lint status"/></a>
+<p><a href="https://github.com/christinahedges/sparse3d/actions/workflows/tests.yml"><img src="https://github.com/christinahedges/sparse3d/workflows/tests/badge.svg" alt="Test status"/></a>
+<a href="https://github.com/christinahedges/sparse3d/actions/workflows/black.yml"><img src="https://github.com/christinahedges/sparse3d/workflows/black/badge.svg" alt="Lint status"/></a> <a href="https://github.com/christinahedges/sparse3d/actions/workflows/flake8.yml"><img src="https://github.com/christinahedges/sparse3d/workflows/flake8/badge.svg" alt="Lint status"/></a>
 <a href="https://christinahedges.github.io/sparse3d/"><img alt="Documentation badge" src="https://img.shields.io/badge/documentation-live-blue.svg" /></a>
 <img alt="PyPI Version" src="https://img.shields.io/pypi/v/sparse3d" /></p>
 <h1 id="sparse3d"><code>sparse3d</code></h1>
