--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 <a href="https://christinahedges.github.io/sparse3d/"><img alt="Documentation badge" src="https://img.shields.io/badge/documentation-live-blue.svg" /></a>
 <img alt="PyPI Version" src="https://img.shields.io/pypi/v/sparse3d" /></p>
 <h1 id="sparse3d"><code>sparse3d</code></h1>
-<p>This package contains implimentations of a class for working with data that looks like a <strong>single large sparse image</strong> containing small regions of <strong>dense data</strong>. Really, this is designed for working with astronomical images.</p>
+<p>This package contains implimentations of a class for working with data that looks like a <strong>single large sparse image</strong> containing small regions of <strong>dense data</strong>. This is designed for working with astronomical images where we often have many small dense images (e.g. stars) set into a sparse frame (e.g. a large astronomical image).</p>
 <h2 id="what-is-sparse3d">What is <code>sparse3D</code>?</h2>
 <p>We often have large images in astronomy that might look like the sketch below. In this sketch we have a large, sparse image with 4 dense regions; A, B, C, and D. In astronomy we have this situation often, where we have small images of point like stars spread over large images.</p>
 <pre><code>+-------------------------------------+
