--- a/index.html
+++ b/index.html
@@ -529,11 +529,12 @@
 <p><a href="https://github.com/christinahedges/sparse3d/actions/workflows/tests.yml"><img src="https://github.com/christinahedges/sparse3d/workflows/tests/badge.svg" alt="Test status"/></a>
 <a href="https://github.com/christinahedges/sparse3d/actions/workflows/black.yml"><img src="https://github.com/christinahedges/sparse3d/workflows/black/badge.svg" alt="Lint status"/></a> <a href="https://github.com/christinahedges/sparse3d/actions/workflows/flake8.yml"><img src="https://github.com/christinahedges/sparse3d/workflows/flake8/badge.svg" alt="Lint status"/></a>
 <a href="https://christinahedges.github.io/sparse3d/"><img alt="Documentation badge" src="https://img.shields.io/badge/documentation-live-blue.svg" /></a>
-<img alt="PyPI Version" src="https://img.shields.io/pypi/v/sparse3d" /></p>
+<img alt="PyPI Version" src="https://img.shields.io/pypi/v/sparse3d" />
+<a href="https://doi.org/10.5281/zenodo.17088544"><img alt="DOI" src="https://zenodo.org/badge/DOI/10.5281/zenodo.17088544.svg" /></a></p>
 <h1 id="sparse3d"><code>sparse3d</code></h1>
-<p>This package contains implimentations of a class for working with data that looks like a <strong>single large sparse image</strong> containing small regions of <strong>dense data</strong>. This is designed for working with astronomical images where we often have many small dense images (e.g. stars) set into a sparse frame (e.g. a large astronomical image).</p>
+<p>This package contains implementations of a class for working with data that looks like a <strong>single large sparse image</strong> containing small regions of <strong>dense data</strong>. This is designed for working with astronomical images where we often have many small dense images (e.g. stars) set into a sparse frame (e.g. a large astronomical image).</p>
 <h2 id="what-is-sparse3d">What is <code>sparse3D</code>?</h2>
-<p>We often have large images in astronomy that might look like the sketch below. In this sketch we have a large, sparse image with 4 dense regions; A, B, C, and D. In astronomy we have this situation often, where we have small images of point like stars spread over large images.</p>
+<p>We often have large images in astronomy that might look like the sketch below. In this sketch we have a large, sparse image with 4 dense regions; A, B, C, and D. In astronomy we have this situation often, where we have small images of point-like stars spread over large images.</p>
 <pre><code>+-------------------------------------+
 |                                     |
 |   +-----+        +-----+            |
@@ -555,7 +556,7 @@
 <p>We may wish to calculate a model for star brightness in each of these regions. In this case, we likely do not care about the value of the model outside these regions, e.g. at the point in the image indicated by <code>*</code>. However, our model may still be based on where we are within this larger image.</p>
 <p>Because of this, it is efficient for us to take this image and cast it into a sparse representation using <a href="https://scipy.org/"><code>scipy</code>'s</a> <code>sparse</code> library.</p>
 <p>Unfortunately <code>sparse</code> does not easily enable us to do this, as it only allows 2D arrays.</p>
-<p>This small repository implements a way that we can hold the data corresponding to each of the sub images inside of a sparse array, by "unwrapping" the indices for the sub images and insetting them in the larger, sparse image.</p>
+<p>This small repository implements a way that we can hold the data corresponding to each of the sub-images inside of a sparse array, by "unwrapping" the indices for the sub-images and insetting them in the larger, sparse image.</p>
 <h2 id="installation">Installation</h2>
 <p>You can install with pip using</p>
 <pre><code>pip install sparse3d --upgrade
@@ -563,7 +564,7 @@
 <p>or you can clone this repo and install using</p>
 <pre><code>cd sparse3d/
 pip install poetry --upgrade
-poetry install .
+poetry install
 </code></pre>
 
 
