--- a/roisparse3d/index.html
+++ b/roisparse3d/index.html
@@ -943,8 +943,8 @@
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Convenience function to return a new version of this class&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="vm">__class__</span><span class="p">(</span>
             <span class="n">data</span><span class="o">=</span><span class="n">new_data</span><span class="p">,</span>
-            <span class="n">row</span><span class="o">=</span><span class="n">new_row</span><span class="p">,</span>
-            <span class="n">col</span><span class="o">=</span><span class="n">new_col</span><span class="p">,</span>
+            <span class="n">row</span><span class="o">=</span><span class="n">new_row</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">imcorner</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span>
+            <span class="n">col</span><span class="o">=</span><span class="n">new_col</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">imcorner</span><span class="p">[</span><span class="mi">1</span><span class="p">],</span>
             <span class="n">imshape</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">imshape</span><span class="p">,</span>
             <span class="n">imcorner</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">imcorner</span><span class="p">,</span>
             <span class="n">nROIs</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">nROIs</span><span class="p">,</span>
